# alpha-catan

./: .gitignore  LICENSE  README.md  Untitled-1.html  Untitled-2.py  Untitled-3.html  cata_ocr.py  catan_ai.py  catan_ai_cupy.py  catan_board.py  catan_game.py  catan_game_cupy.py  catan_player.py  colonist_automator.py  data_csv.py  example_chat_logs.html  playright_img_collection.py  pyproject.toml  reward_list.pickle  running.txt  setllementmatching.py  test.py  time.ipynb  turn_list.pickle
test/: test_catan.py
