[tool.poetry]
name = "alpha-catan"
version = "0.1.0"
description = ""
authors = ["Chris L"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.26.3"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
