[tool.poetry]
name = "alpha-catan"
version = "0.1.0"
description = ""
authors = ["Chris L"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
playwright = "^1.41.2"
opencv-python = "^4.9.0"
pyautogui = "^0.9.54"
ruff = "^0.3.7"
pytest = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
